switch images and change about

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ import Navigation from "../components/Navigation.astro";
     <main>
         <Navigation />
         <section class="summary-container">
-            <p>I started off running in high school without a clue about what I was doing. All I know was that I was getting healthier and fitter than ever so I continued this journey. Running began to play a significant role in my life. From the daily mileage and speed sessions, to the races and the growing community of runners, it has shaped my perspective of the world around me. The discipline along with creativity and pursuit of constant challenge was the lifestyle I could never abandon. You can track all my training here on <a class="strava-link" href="https://www.strava.com/athletes/33642798" target="_blank">Strava</a>.</p>
+            <p>I started off running in high school without a clue about what I was doing. My main goal was to get a decent amount of exercise in so that I can eat all kinds of food. After a few years, I felt that I was getting healthier and fitter than ever so I continued this journey after graduation. Before I knew it, running began to play a significant role in my life. From the daily mileage and speed sessions, to the races and the growing community of runners, it has shaped my perspective of the world around me. The discipline along with the pursuit of constant challenge was the lifestyle I could never abandon. You can track all my training here on <a class="strava-link" href="https://www.strava.com/athletes/33642798" target="_blank">Strava</a>.</p>
         </section>
     
         <!-- <Strava /> -->
