--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -20,10 +20,30 @@ import Footer from './Footer.astro';
     </section>
 
     <section class="projects-container">
-        <ProjectCard title="In Progress" href="#" description="" img="/assets/astro.svg"></ProjectCard>
-        <ProjectCard title="In Progress" href="#" description="" img="/assets/astro.svg"></ProjectCard>
-        <ProjectCard title="In Progress" href="#" description="" img="/assets/astro.svg"></ProjectCard>
-        <ProjectCard title="In Progress" href="#" description="" img="/assets/astro.svg"></ProjectCard>
+        <ProjectCard 
+            title="In Progress" 
+            href="#" 
+            description="" 
+            img="https://archives.bulbagarden.net/media/upload/thumb/f/fb/0001Bulbasaur.png/500px-0001Bulbasaur.png">
+        </ProjectCard>
+        <ProjectCard 
+            title="In Progress" 
+            href="#" 
+            description="" 
+            img="https://archives.bulbagarden.net/media/upload/thumb/f/fb/0001Bulbasaur.png/500px-0001Bulbasaur.png">
+        </ProjectCard>
+        <ProjectCard 
+            title="In Progress" 
+            href="#" 
+            description="" 
+            img="https://archives.bulbagarden.net/media/upload/thumb/f/fb/0001Bulbasaur.png/500px-0001Bulbasaur.png">
+        </ProjectCard>
+        <ProjectCard 
+            title="In Progress" 
+            href="#" 
+            description="" 
+            img="https://archives.bulbagarden.net/media/upload/thumb/f/fb/0001Bulbasaur.png/500px-0001Bulbasaur.png">
+        </ProjectCard>
     </section>
     <Footer />
     <!-- <Strava /> -->
@@ -59,6 +79,7 @@ import Footer from './Footer.astro';
         text-align: left;
         color: var(--purple-color);
         font-size: 1rem;
+        font-weight: bold;
     }
 
     .header-container,
