--- a/src/components/Project-Card.astro
+++ b/src/components/Project-Card.astro
@@ -62,6 +62,8 @@ const { title, href, description, img } = Astro.props;
     img {
         width: 100%;
         height: 100%;
+        max-width: 100%;
+        max-height: 100%;
         object-fit: contain;
     }
 </style>
