--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -16,7 +16,7 @@ import Footer from './Footer.astro';
         <div class="profile-pic">
             <img src="https://archives.bulbagarden.net/media/upload/thumb/f/fb/0001Bulbasaur.png/500px-0001Bulbasaur.png" alt="Jacky">
         </div>
-        <p>Hey I'm <span id="name">Jacky</span>. I am currently learning the art of Computer Science at the University of Pennsylvania. This site showcases my journey with Computer Science. I spend most of my time in balancing my academic interests like machine learning, health sciences, and data visualization, along with my athletic pursuits as a distance runner. These experiences sparked my interest into exploring data and programming leading me to work on projects using Python, Javascript, and Mathematical Modeling.
+        <p>Hey I'm <span id="name">Jacky</span>. I am currently learning the art of Computer Science at the University of Pennsylvania. This site showcases my lifelong journey of learning. I spend most of my time in balancing my academic interests like machine learning, health sciences, and data visualization, along with my athletic pursuits as a distance runner. These experiences sparked my interest into exploring data and programming leading me to work on projects using Python, Javascript, and Mathematical Modeling.
     </section>
 
     <section class="projects-container">
