--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -19,6 +19,8 @@
         box-sizing: border-box;
         padding: 0;
         margin: 0;
+        --orange-color: rgb(223, 96, 22);
+        --purple-color: rgb(148, 9, 235);
     }
 
     .social-links {
