--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,7 +3,7 @@
 
 <div class="navigation-container">
     <ul class="social-links">
-        <li><a href="/">Home <i class="fa fa-home"></i></a></li>
+        <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
         <li><a href="https://github.com/smallnumbers0" target="_blank"><i class="fa fa-github"></i></a></li>
         <li><a href="https://www.linkedin.com/in/jackykchoi/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
     </ul>
@@ -72,14 +72,14 @@
         font-size: 1rem;
         margin: 0.5rem 0;
         border-radius: 5px;
-        padding: 0 0.3 0.3 0.3rem;
+        padding: 0 0.3rem 0.3rem 0.3rem;
     }
 
     .social-links a {
         padding: 0.2rem;
     }
 
-    a:hover {
+    .social-links a:hover {
         color: var(--purple-color);
         transition: 0.9s;
         box-shadow: inset 0 0 0 2px var(--purple-color);
